--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
  version: "3"
 
  services:
+   redis:
+     image: redis:latest
+     ports:
+       - "6379:6379"
    db:
      image: postgres:latest
      ports:
